# Practic_exercises

./: Bank_bill.cpp  Bank_bill.h  CMakeCache.txt  CMakeLists.txt  func.cpp  func.h  golf.cpp  golf.h  list.cpp  list.h  main.cpp  main.h  move.cpp  move.h  plorg.cpp  plorg.h  stack.cpp  stack.h  vector.cpp
headers/: arraydb.h  baddude.h  bankaccnt.h  card.h  cd.h  classic.h  complex0.h  cow.h  emp.h  gunslinger.h  hgexcept.h  overdrft.h  person.h  pokerplayer.h  port.h  queue.h  queueTp.h  stack.h  stock.h  stonewt.h  strings.h  tv.h  vector.h  vintageport.h  wine.h  workermi.h
src/: arraydb.cpp  baddude.cpp  bankaccnt.cpp  cd.cpp  classic.cpp  complex0.cpp  cow.cpp  emp.cpp  gunslinger.cpp  hgexcept.cpp  main.cpp  overdrft.cpp  person.cpp  pokerplayer.cpp  port.cpp  queue.cpp  stack.cpp  stock.cpp  stonewt.cpp  strings.cpp  tv.cpp  vintageport.cpp  wine.cpp  workermi.cpp
